--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap");
+@import 'aos/dist/aos.css';
 
 @tailwind base;
 @tailwind components;
@@ -19,4 +20,27 @@ html, body {
 /* Ensure the main container also covers the full height */
 #root {
   min-height: 100%;
+}
+
+/* banner area header text animation ! */
+.flicker {
+  font-size: 6rem;
+  font-family: 'Merienda', sans-serif;
+  margin: 1rem auto;
+  color: #ffffff61;
+  background: -webkit-gradient(linear, left top, right top, from(#e6e6e6), to(#1d1c1c), color-stop(0.8, #ffffff)) no-repeat;
+  background: gradient(linear, left top, right top, from(#222), to(#222), color-stop(0.8, #fff)) no-repeat;
+  background-size: 110px 100%;
+  -webkit-background-clip: text;
+  background-clip: text;
+  animation: flick 3s infinite;
+}
+
+@keyframes flick {
+  0% {
+    background-position: top left;
+  }
+  100% {
+    background-position: top right;
+  }
 }
